add more basic components

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+/* Shared global styles*/
+@import 'app/shared/styles/index';
+
+
+/* Material Theming */
+@import '~@angular/material/theming';
+@import './app/app-theme';
+
+// Include material core styles.
+@include mat-core();
+
+
+// Define the light theme.
+$primary: mat-palette($mat-indigo);
+$accent:  mat-palette($mat-pink, A200, A100, A400);
+
+$theme: mat-light-theme($primary, $accent);
+@include angular-material-theme($theme);
+@include ee-app-theme($theme);
