-- added icon -- make sidenav to min-height 100vh

--- a/client/src/app/shared/components/navbar/navbar.component.html
+++ b/client/src/app/shared/components/navbar/navbar.component.html
@@ -1,3 +1,4 @@
 <div class="ee-navbar">
-  Điện Thủy Bình
+  <mat-icon class="ee-navbar__icon" (click)="onMenuClick()">menu</mat-icon>
+  <h1 class="ee-navbar__title">Điện Thủy Bình</h1>
 </div>
