--- a/client/src/app/shared/components/navbar/navbar.component.scss
+++ b/client/src/app/shared/components/navbar/navbar.component.scss
@@ -1,4 +1,18 @@
 .ee-navbar {
-  height: 8rem;
+  height: 5rem;
   padding: 1rem;
+  display: flex;
+  align-items: center;
+
+  &__icon {
+    margin-right: 2rem;
+    font-size: 3rem;
+    line-height: 1;
+    width: 3rem;
+    height: 3rem;
+  }
+
+  &__title {
+    font-size: 2rem;
+  }
 }
