--- a/client/src/app/shared/components/sidenav/sidenav.component.html
+++ b/client/src/app/shared/components/sidenav/sidenav.component.html
@@ -1,3 +1,7 @@
-<p>
-  sidenav works!
-</p>
+<mat-sidenav-container class="ee-sidenav__container">
+  <mat-sidenav class="ee-sidenav" #sidenav>Start</mat-sidenav>
+
+  <mat-sidenav-content>
+    <ng-content></ng-content>
+  </mat-sidenav-content>
+</mat-sidenav-container>
