--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,5 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<ee-navbar></ee-navbar>
-<router-outlet></router-outlet>
+<ee-sidenav #sidenav>
+  <ee-navbar (toggleSidenav)="sidenav.toggle()"></ee-navbar>
+  <router-outlet></router-outlet>
+</ee-sidenav>
 
