--- a/client/src/app/shared/components/navbar/_navbar-theme.scss
+++ b/client/src/app/shared/components/navbar/_navbar-theme.scss
@@ -5,6 +5,7 @@
   $accent: map-get($theme, accent);
 
   .ee-navbar {
+    color: mat-color($primary, default-contrast);
     background-color: mat-color($primary);
     border-color: mat-color($accent, A400);
   }
