--- a/client/src/app/shared/styles/general.scss
+++ b/client/src/app/shared/styles/general.scss
@@ -1,2 +1,11 @@
-@import "./variables";
-@import "./general";
+html {
+  font-size: 62.5%;
+  height: 100%;
+}
+
+body {
+  font-family: "Roboto","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+  margin: 0;
+  font-size: 1.4rem;
+  height: 100%;
+}
